Fixed spacing for feature icon

--- a/frontend/src/containers/pricing.scss
+++ b/frontend/src/containers/pricing.scss
@@ -85,6 +85,8 @@ $borderStyle: 1px solid darken($containerBgColor, 4);
                 color: $activeLinkColor;
                 .far{
                     position: relative;
+                    font-size: 22px;
+                    vertical-align: -3px;
                     padding-right: 16px;
                 }
                 &:first-child{
@@ -99,6 +101,9 @@ $borderStyle: 1px solid darken($containerBgColor, 4);
             position: relative;
             margin: 32px 0;
             padding: 16px 0 0;
+            a{
+                background: $activeLinkColor;
+            }
         }
     }
 }
